example_4/requirements.txt
Traceback (most recent call last):
  File "main.py", line 2, in <module>
    from util import connect_to_db, disconnect_from_db, run_and_fetch_sql
  File "/home/taylor/Desktop/HW3700/HW/util.py", line 36
    try:
    ^
IndentationError: expected an indented block

